2005-03-07  Mark McLoughlin  <markmc@redhat.com>

	This commit changes the metadata format again.

	* lib/storage.py: save a timestamp rather than date
	string for each revision.
	
	* admin-tool/editorwindow.py: format the timestamp
	according to the locale.
	
	* lib/util.py:
	(init_gettext): call setlocale()

Mon Mar  7 16:08:23 CET 2005 Daniel Veillard <veillard@redhat.com>

	* doc/Makefile.am: added validation of output pages on rebuild
	  and package them in the distrib
	* sabayon.spec.in: add the web informations as documentation

Mon Mar  7 15:45:12 CET 2005 Daniel Veillard <veillard@redhat.com>

	* Makefile.am configure.ac doc/Makefile.am: integrating the doc
	  subdir with the site/doc informations. The "make rebuild" target
	  rebuilds the web site
	* doc/brownbar.jpg doc/brownbarTop.jpg doc/sabayon.css doc/shadow.gif
	  doc/title01.jpg doc/title02.jpg: new web site design from
	  Diana Fong and Bryan Clark
	* TODO site.xsl flat.html: converted the web site generation to
	  a raw content flat file and an XSLT stylesheet generating the
	  html pages. Separation of content and presentation, except the
	  content of the boxes on the left is contained in the stylesheet,
	  but they should stll be easy to maintain.

2005-03-07  Mark McLoughlin  <markmc@redhat.com>

	* admin-tool/editorwindow.py: add a combo to allow
	selecting the profile revision.
	
	* lib/storage.py:
	(ProfileStorage.get_revision): return the date along
	with the revision in a tuple.

Sun Mar  6 11:49:38 CET 2005 Daniel Veillard <veillard@redhat.com>

	* po/POTFILES.in: added admin-tool/aboutdialog.py to avoid automated
	  mail stating it is missing.

2005-03-04  Mark McLoughlin  <markmc@redhat.com>

	* admin-tool/editorwindow.py: convert to using
	gtk.UIManager.
	
	* admin-tool/sabayon.glade: remove the editor
	window.

2005-03-03  Mark McLoughlin  <markmc@redhat.com>

	* admin-tool/Makefile.am: add saveconfirm.py

	* admin-tool/saveconfirm.py: HIG save confirmation