@@ -1,5 +1,15 @@
 2005-03-07  Mark McLoughlin  <markmc@redhat.com>
 
+	* lib/storage.py:
+	(ProfileStorage.get_source),
+	(ProfileStorage.revert): implement.
+	(run_unit_tests): yet more unit tests.
+	
+	* admin-tool/editorwindow.py: allow reverting to
+	previous versions of the profile.
+
+2005-03-07  Mark McLoughlin  <markmc@redhat.com>
+
 	This commit changes the metadata format again.
 
 	* lib/storage.py: save a timestamp rather than date
